# SMU-Auto-Evaluation

./: config.ini  main.py  pixi.toml  pyproject.toml  readme.md  requirements.txt
